fix on mobile style

--- a/src/frontend/styles/_shared/_mobile.styl
+++ b/src/frontend/styles/_shared/_mobile.styl
@@ -38,6 +38,10 @@ body
   
   body
     padding-top: 0!important
+    
+    &.login_page
+      .for_mobile
+        display: none
     .dynamic_wrapper
       padding-top: 55px
       background: #ececec
@@ -63,6 +67,8 @@ body
       
     .for_desktop
       display: none
+      
+
       
     .parallax-mirror
       display: none
